# Solana-Arbitrage-Bot

./: Anchor.toml  README.md  README1.md  dex-integration.mermaid  high-level-requirements.mermaid  key-data-structures.mermaid  main.py  off-chain-program-architecture.mermaid  on-chain-architecture.mermaid  pool-graph.mermaid  transaction-flow.mermaid
arb-bone/: Anchor.toml
arb-bone/programs/tmp/: Cargo.toml
arb-bone/programs/tmp/src/: ix_data.rs
arb-bone/programs/tmp/src/constants/: mod.rs
arb-bone/programs/tmp/src/state/: mod.rs
arb-bone/programs/tmp/src/swaps/: meteora.rs  mod.rs  orca.rs
arbitrage/: Cargo.toml
arbitrage/client/src/: dex_client.rs  main.rs  price_monitor.rs  route_finder.rs  types.rs
arbitrage/programs/tmp/: Cargo copy.toml  Cargo.toml
arbitrage/programs/tmp/src/: error.rs  lib.rs
arbitrage/programs/tmp/src/state/: arbitrage_state.rs
arbitrage/programs/tmp/src/swaps/: jupiter.rs  raydium.rs
arbitrage1/: Cargo.toml
arbitrage1/program/: Cargo.toml
arbitrage1/program/src/: instruction.rs  lib.rs  processor.rs  state.rs
arbitrage1/src/: dex_client.rs  error.rs  lib.rs  main.rs  pool.rs  price_monitor.rs  router_finder.rs  types.rs
client-pool/src/: constants.rs  main new.rs
client-pool/src/pool_utils/: raydium.rs
client/src/: main-origin.rs  main.rs  pool.rs
client/src/pool_utils/: mod.rs
client/src/pools/: jupiter.rs  mod.rs  orca.rs  raydium.rs
client/src/setup/: setup_ata.rs
programs/dex-cpi/: Cargo.toml
programs/dex-cpi/src/: constants.rs  errors.rs  lib.rs
programs/dex-cpi/src/instructions/: add_whitelist.rs  initialize.rs  manage_whitelist.rs  mod.rs  raydium_swap.rs  remove_whitelist.rs  set_pause.rs  swap_ray.rs  swap_whirlpool.rs  swap_whirlpools.rs
programs/dex-cpi/src/state/: mod.rs  whitelist.rs
solana-jito/strategies/: sniping_strategy.rs
solana-mev/: README.md  main.rs
solana-mev/strategies/: liquidation.rs
solana-program/: Cargo.toml
solana-program/programs/tmp/: Cargo.toml
solana-program/programs/tmp/src/: ix_data.rs  lib.rs
solana-program/programs/tmp/src/error/: error.rs
solana-program/programs/tmp/src/state/: mod.rs  swap_state.rs
solana-program/programs/tmp/src/swaps/: jupiter.rs  meteora.rs  mod.rs  orca.rs  raydium.rs
tests/: cpi_swap_test.js
