[package]
name = "arbitrage1"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
solana-sdk = "1.16"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
log = "0.4"
env_logger = "0.10" 