[package]
name = "arbitrage1-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
thiserror = "1.0"
arrayref = "0.3.7"
borsh = "0.10"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"] 