[package]
name = "dex-cpi"
version = "0.1.0"
description = "CPI Swap Program with Raydium and Whirlpools integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dex-cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16.0"
whirlpools = { git = "https://github.com/orca-so/whirlpools", features = ["cpi"] }